--- a/matching.bib
+++ b/matching.bib
@@ -18,6 +18,15 @@
 	publisher={Elsevier}
 }
 
+@article{gale1962college,
+	title={College admissions and the stability of marriage},
+	author={Gale, David and Shapley, Lloyd S},
+	journal={American mathematical monthly},
+	pages={9--15},
+	year={1962},
+	publisher={JSTOR}
+}
+
 @incollection{costello2012stochastic,
 	title={Stochastic matching with commitment},
 	author={Costello, Kevin P and Tetali, Prasad and Tripathi, Pushkar},
@@ -108,4 +117,51 @@
 	pages={733--762},
 	year={2012},
 	publisher={Springer}
+}
+
+@article{mehta2007adwords,
+	title={Adwords and generalized online matching},
+	author={Mehta, Aranyak and Saberi, Amin and Vazirani, Umesh and Vazirani, Vijay},
+	journal={Journal of the ACM (JACM)},
+	volume={54},
+	number={5},
+	pages={22},
+	year={2007},
+	publisher={ACM}
+}
+
+@article{hitsch2010matching,
+	title={Matching and sorting in online dating},
+	author={Hitsch, G{\"u}nter J and Horta{\c{c}}su, Ali and Ariely, Dan},
+	journal={The American Economic Review},
+	pages={130--163},
+	year={2010},
+	publisher={JSTOR}
+}
+
+@techreport{roth2003kidney,
+	title={Kidney exchange},
+	author={Roth, Alvin E and Sonmez, Tayfun and Unver, M Utku},
+	year={2003},
+	institution={National Bureau of Economic Research}
+}
+
+@article{roth2005pairwise,
+	title={Pairwise kidney exchange},
+	author={Roth, Alvin E and S{\"o}nmez, Tayfun and {\"U}nver, M Utku},
+	journal={Journal of Economic theory},
+	volume={125},
+	number={2},
+	pages={151--188},
+	year={2005},
+	publisher={Elsevier}
+}
+
+@inproceedings{awasthi2009online,
+	title={Online Stochastic Optimization in the Large: Application to Kidney Exchange.},
+	author={Awasthi, Pranjal and Sandholm, Tuomas},
+	booktitle={IJCAI},
+	volume={9},
+	pages={405--411},
+	year={2009}
 }
